// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Plan, create, and configure production-ready Azure Kubernetes Service (AKS) clusters. Covers Day-0 checklist, SKU selection, networking, security, and operations. WHEN: provision AKS cluster, design AKS networking, choose AKS SKU, secure AKS, set up AKS. DO NOT USE FOR: deploying apps to AKS (use azure-deploy), debugging AKS issues (use azure-diagnostics), AKS monitoring queries (use azure-kusto).",
  "extractedKeywords": [
    "aks",
    "analysis",
    "apps",
    "automatic",
    "autoscaling",
    "azure",
    "azure-kusto",
    "checklist",
    "choose",
    "cli",
    "cluster",
    "clusters",
    "configuration",
    "configure",
    "container",
    "cost",
    "covers",
    "create",
    "day-0",
    "deploy",
    "deployment",
    "design",
    "diagnostic",
    "debugging",
    "deploying",
    "driver",
    "egress",
    "entra",
    "function",
    "identity",
    "issues",
    "key vault",
    "kubernetes",
    "mcp",
    "monitor",
    "monitoring",
    "networking",
    "node",
    "observability",
    "operations",
    "options",
    "overlay",
    "plan",
    "policy",
    "pools",
    "private",
    "production-ready",
    "provision",
    "queries",
    "safeguards",
    "secure",
    "security",
    "selection",
    "server",
    "service",
    "standard",
    "strategy",
    "upgrade",
    "vault",
    "when",
    "workload",
  ],
  "name": "azure-kubernetes",
}
`;

exports[`azure-kubernetes - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analysis",
  "apps",
  "automatic",
  "autoscaling",
  "azure",
  "azure-kusto",
  "checklist",
  "choose",
  "cli",
  "cluster",
  "clusters",
  "configuration",
  "configure",
  "container",
  "cost",
  "covers",
  "create",
  "day-0",
  "deploy",
  "deployment",
  "design",
  "diagnostic",
  "debugging",
  "deploying",
  "driver",
  "egress",
  "entra",
  "function",
  "identity",
  "issues",
  "key vault",
  "kubernetes",
  "mcp",
  "monitor",
  "monitoring",
  "networking",
  "node",
  "observability",
  "operations",
  "options",
  "overlay",
  "plan",
  "policy",
  "pools",
  "private",
  "production-ready",
  "provision",
  "queries",
  "safeguards",
  "secure",
  "security",
  "selection",
  "server",
  "service",
  "standard",
  "strategy",
  "upgrade",
  "vault",
  "when",
  "workload",
]
`;
